# mac-mail-backup

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
src/mac_mail_backup/: __init__.py  backup.py  cli.py  converter.py
tests/: __init__.py  test_cli.py  test_converter.py
