[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac-mail-backup"
version = "1.0.0"
description = "Backup Apple Mail accounts to portable mbox format"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Abhishek Yenpure"},
]
maintainers = [
    {name = "Abhishek Yenpure"},
]
keywords = [
    "apple-mail",
    "backup",
    "email",
    "macos",
    "mbox",
    "mail",
    "export",
    "emlx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
mac-mail-backup = "mac_mail_backup.cli:main"

[project.urls]
Homepage = "https://github.com/ayenpure/mac-mail-backup"
Documentation = "https://github.com/ayenpure/mac-mail-backup#readme"
Repository = "https://github.com/ayenpure/mac-mail-backup.git"
Issues = "https://github.com/ayenpure/mac-mail-backup/issues"
Changelog = "https://github.com/ayenpure/mac-mail-backup/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mac_mail_backup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mac_mail_backup"]
